ui(search): DOM-pohjainen tuloslista + siistit napit

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,16 @@
     </section>
 
     <section class="card">
+      <h2>Varmuuskopiointi</h2>
+      <div class="row gap">
+        <button id="btnExport" class="btn">Vie JSON</button>
+        <button id="btnImport" class="btn">Tuo JSON</button>
+        <input id="fileImport" type="file" accept="application/json,.json" class="hidden-input" />
+        <span class="muted small">Vie/Tuo osallistujat ja valinnat tältä laitteelta.</span>
+      </div>
+    </section>
+
+    <section class="card">
       <h2>Osallistujat</h2>
       <div class="row gap">
         <input id="newParticipant" class="input" placeholder="Osallistujan nimi" />
